# search_engine

./: CMakeLists.txt  LICENSE  README.md  answers.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: config.json  file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  requests.json
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  search_tests.cpp
